Velcro test First SandBox/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Objective_Goal__c</fullName>
        <inlineHelpText>&quot;PROJECT DESCRIPTION&quot; What are the customer&apos;s expectations for the product&apos;s form,fit,and function? What does the customer expect from our company? What is the problem being solved? Include project scope on cost,schedule &amp; performance,pkging requirements</inlineHelpText>
        <label>Objective / Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Category2__c</fullName>
        <formula>TEXT(Account.Customer_Category__c)</formula>
        <label>Opportunity Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Category__c</fullName>
        <description>EMEA-only field</description>
        <label>Opportunity Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_SBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive Seating</fullName>
                </value>
                <value>
                    <fullName>Automotive Interiors</fullName>
                </value>
                <value>
                    <fullName>Automotive All Other</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Mass Transit</fullName>
                </value>
                <value>
                    <fullName>Transportation Distributors</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Surgical</fullName>
                </value>
                <value>
                    <fullName>Respiratory</fullName>
                </value>
                <value>
                    <fullName>Vascular</fullName>
                </value>
                <value>
                    <fullName>Ostomy</fullName>
                </value>
                <value>
                    <fullName>Contract Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Medical Distributors</fullName>
                </value>
                <value>
                    <fullName>Others (small applications)</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Rigid Packaging</fullName>
                </value>
                <value>
                    <fullName>Warehouse &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Gift, Promotional &amp; Stationery</fullName>
                </value>
                <value>
                    <fullName>P&amp;MH Distributors</fullName>
                </value>
                <value>
                    <fullName>Other Packaging</fullName>
                </value>
                <value>
                    <fullName>Construction  (Cable Management)</fullName>
                </value>
                <value>
                    <fullName>Building Envelop</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Renewable Energy</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Construction Distributors</fullName>
                </value>
                <value>
                    <fullName>Infant Care</fullName>
                </value>
                <value>
                    <fullName>Child Care</fullName>
                </value>
                <value>
                    <fullName>Feminine Care</fullName>
                </value>
                <value>
                    <fullName>Adult Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Code__c</fullName>
        <formula>CASE(Opportunity_Type__c, &apos;D-SPD Request&apos;, SPD_Project_Number__c , &apos;E-AED/NPI Request&apos;, AED_NPI_Number__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SBU2__c</fullName>
        <formula>TEXT(Account.SBU__c)</formula>
        <label>Opportunity SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SBU__c</fullName>
        <label>Opportunity SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_DR_ID__c</fullName>
        <description>Oracle Development Request ID</description>
        <label>Oracle DR ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_DR_Leader_Email__c</fullName>
        <description>Leader&apos;s Email of Development Request in Oracle</description>
        <label>Oracle DR Leader Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_DR_Leader__c</fullName>
        <description>Oracle Development Request Leader</description>
        <label>Oracle DR Leader</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Donwloaded__c</fullName>
        <description>This field indicates if DR is downloaded to Oracle</description>
        <label>Oracle Donwloaded</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Amount__c</fullName>
        <description>First $$ amount greater than 0</description>
        <label>Original Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Avail_Prods_Meet_Needs_of_Cust__c</fullName>
        <label>Other Avail. Prods Meet Needs of Cust.?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Competition_1__c</fullName>
        <label>Other Competition 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Email__c</fullName>
        <label>Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner.LastName &amp; &quot;, &quot; &amp; Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>Owner.Region__c</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDR_Approval_Criteria__c</fullName>
        <formula>Account.RecordType.DeveloperName + &quot;.&quot; + TEXT(Account.SBU__c)+ &quot;.&quot; + TEXT(Request_Status__c)+ &quot;.&quot; +  RecordType.DeveloperName+ &quot;.&quot; +  TEXT(Direct_Sales_Request__c)</formula>
        <label>PDR Approval Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDR__c</fullName>
        <label>PDR #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPAP_FAIR__c</fullName>
        <inlineHelpText>Customer approval documentation - if required (adds 21 days to AED date approx.)</inlineHelpText>
        <label>PPAP/FAIR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <inlineHelpText>Add quick description of the packaging (ex. BULK &quot;X&quot; Pieces by box or bag,etc)</inlineHelpText>
        <label>Packaging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to Parent . Keeps track of a parent-child relationship-</description>
        <inlineHelpText>See parent Opportunity</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT(Account.Partner_Type_1__c)</formula>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pilot_Runs__c</fullName>
        <label>Pilot Runs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>&gt;1</fullName>
                </value>
                <value>
                    <fullName>&gt;3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EMEA-only field</description>
        <label>Pipeline Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Next_Year__c</fullName>
        <description>EMEA-only field.</description>
        <inlineHelpText>Which % of the Potential Mature/Full year can be achieved Next year?</inlineHelpText>
        <label>Potential (%) Next Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Sales_CY__c</fullName>
        <description>EMEA : Potential Sales current FY</description>
        <inlineHelpText>EMEA : Potential Sales current FY</inlineHelpText>
        <label>Potential Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Sales_Mature_Full_Year__c</fullName>
        <description>EMEA Field: Potential Sales mature/Full year</description>
        <inlineHelpText>Potential Sales in the Mature/Full year.</inlineHelpText>
        <label>Potential Sales Mature/Full Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Sales_Next_Year__c</fullName>
        <description>EMEA Field: Potential Sales next year</description>
        <formula>Potential_Sales_Mature_Full_Year__c *  Potential_Next_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Potential Sales Mature Full Year *  Potential % Next Year</inlineHelpText>
        <label>Potential Sales Next Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Approve_Status__c</fullName>
        <description>For PC PDR PROCESS</description>
        <label>Pre Approve Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resourced</fullName>
                </value>
                <value>
                    <fullName>Not Resourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pressure_Sensitive_Coating__c</fullName>
        <inlineHelpText>Pressure Sensitive Coating</inlineHelpText>
        <label>Pressure Sensitive Coating</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Name__c</fullName>
        <formula>Pricebook2.Name</formula>
        <label>Price Book Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Points__c</fullName>
        <label>Price Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price_Target_2nd_Item__c</fullName>
        <inlineHelpText>Price Target if you have a 2nd Item on this PDR</inlineHelpText>
        <label>Price Target 2nd Item</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Target_3rd_Item__c</fullName>
        <inlineHelpText>If Needed</inlineHelpText>
        <label>Price Target 3rd Item</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Target_4th_Item__c</fullName>
        <inlineHelpText>If Needed</inlineHelpText>
        <label>Price Target 4th Item</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Target__c</fullName>
        <inlineHelpText>What is the customer expecting to pay per unit?</inlineHelpText>
        <label>Price Target</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary End Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability_of_Succes__c</fullName>
        <inlineHelpText>Estimate the percentage of probability of success for this project</inlineHelpText>
        <label>Probability of Succes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Design__c</fullName>
        <inlineHelpText>When does the design need to be finalized?If known customer design then use the AED Date</inlineHelpText>
        <label>Product Design</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Development__c</fullName>
        <label>Product Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Product Family for LATAM Market</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesive Tape</fullName>
                </value>
                <value>
                    <fullName>AFTC TAPES</fullName>
                </value>
                <value>
                    <fullName>Autoloop</fullName>
                </value>
                <value>
                    <fullName>Fabricated Products for FRU</fullName>
                </value>
                <value>
                    <fullName>Fabricated Products for Plant</fullName>
                </value>
                <value>
                    <fullName>Fire Retardant Tape</fullName>
                </value>
                <value>
                    <fullName>Knits</fullName>
                </value>
                <value>
                    <fullName>LOGISTRAP®</fullName>
                </value>
                <value>
                    <fullName>Mold in</fullName>
                </value>
                <value>
                    <fullName>Onewrap Tape</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Specialty Tape</fullName>
                </value>
                <value>
                    <fullName>Personal Care Product</fullName>
                </value>
                <value>
                    <fullName>Plastic Tape</fullName>
                </value>
                <value>
                    <fullName>PRESS-LOK®</fullName>
                </value>
                <value>
                    <fullName>Pressure Sensitive Coins / Squares</fullName>
                </value>
                <value>
                    <fullName>QuickTie Tape</fullName>
                </value>
                <value>
                    <fullName>Seat Inserts</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Standard Hook and Loop Tape</fullName>
                </value>
                <value>
                    <fullName>Texacro Tape</fullName>
                </value>
                <value>
                    <fullName>Tier 3 Tape</fullName>
                </value>
                <value>
                    <fullName>VelLoc Tape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quality_Requirements_Standard__c</fullName>
        <label>Product Quality Requirements Standard?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Require_Standard_Processes__c</fullName>
        <label>Product Require Standard Processes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Requires_Standard_Material__c</fullName>
        <label>Product Requires Standard Material?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC10001</fullName>
                </value>
                <value>
                    <fullName>GC20002</fullName>
                </value>
                <value>
                    <fullName>GC50000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Duration_Years__c</fullName>
        <inlineHelpText>How long is the program expected to last?</inlineHelpText>
        <label>Program Duration/Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Name + &quot;-&quot; + Account.Name</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Status_Notes__c</fullName>
        <label>Program Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Type_Color_Code__c</fullName>
        <formula>CASE(Type, &quot;Existing Business - Erosion&quot;, 1,&quot;Existing Business&quot;,5,&quot;Existing Business - Sustaining&quot;,2,&quot;Existing Business - Incremental&quot;,3,&quot;New Business&quot;,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type Color Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>TEXT(Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate_APAC__c</fullName>
        <label>项目开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DPD</fullName>
                </value>
                <value>
                    <fullName>NPD</fullName>
                </value>
                <value>
                    <fullName>SPD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <description>Used for deal registration.</description>
        <label>Project Budget</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for deal registration.</description>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <description>PC PDR</description>
        <label>Project Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comm</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Et</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Ops</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Samples</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name_1__c</fullName>
        <inlineHelpText>Customer name and brief description of Application</inlineHelpText>
        <label>Project Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_APAC__c</fullName>
        <label>Project Name_APAC</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Potential_APAC__c</fullName>
        <label>Project Potential</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Requirement__c</fullName>
        <inlineHelpText>Specific Details about Project Request</inlineHelpText>
        <label>Project Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New (Approved) Item</fullName>
                </value>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>Contract Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projectcompletion__c</fullName>
        <label>Project Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prototypes_Samples_Specify__c</fullName>
        <inlineHelpText>A:Handmade,Non-Prod Equip.
B.Machine Made,close to Prod Quality
C.Prod Design if firm. Use Prod process and final materials - Submission Sign Off Req
D.Prod Design is frozen. Use validated prod process and final materials - Submission Sign Off Req</inlineHelpText>
        <label>Prototypes/Samples - Specify</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prototypes_Samples__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A.Prototype</fullName>
                </value>
                <value>
                    <fullName>B.Pre-Production Prototype</fullName>
                </value>
                <value>
                    <fullName>C.Production Prototype</fullName>
                </value>
                <value>
                    <fullName>D.First Article Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prototypes_Samples__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prototypes/Samples</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prototypes__c</fullName>
        <inlineHelpText>When does the customer need prototypes? (adds 7 days to AED date - approx.)</inlineHelpText>
        <label>Prototypes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_CY_Amount__c</fullName>
        <description>EMEA-only field.  
Before July 2018 , formula  was : ExpectedRevenue  *  Q1 CY %</description>
        <formula>Realistic_Sales_CY__c *  Q1_CY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Realistic Sales CY  *  Q1 CY %</inlineHelpText>
        <label>Q1 CY Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_CY_Pct__c</fullName>
        <description>EMEA-only field</description>
        <label>Q1 CY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q1_CY__c</fullName>
        <description>EMEA-only field.</description>
        <label>Q1 CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_NY_Amount__c</fullName>
        <description>EMEA-only field</description>
        <formula>Realistic_Sales_Next_Year__c *  Q1_NY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Realistic Sales Next Year  *  Q1 NY %</inlineHelpText>
        <label>Q1 NY Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q1_NY_Pct__c</fullName>
        <description>EMEA-only field</description>
        <label>Q1 NY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q1_NY__c</fullName>
        <description>EMEA-only field</description>
        <label>Q1 NY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_CY_Amount__c</fullName>
        <description>EMEA-only field : 
before July 2018 it was Expexected Sales * Q2 CY %</description>
        <formula>Realistic_Sales_CY__c * Q2_CY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Realistic Sales CY  *  Q2  CY %</inlineHelpText>
        <label>Q2 CY Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_CY_Pct__c</fullName>
        <description>EMEA-only field</description>
        <label>Q2 CY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q2_CY__c</fullName>
        <description>EMEA-only field.</description>
        <label>Q2 CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_NY_Amount__c</fullName>
        <description>EMEA-only field</description>
        <formula>Realistic_Sales_Next_Year__c *  Q2_NY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 NY Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_NY_Pct__c</fullName>
        <description>EMEA-only field</description>
        <label>Q2 NY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q2_NY__c</fullName>
        <label>Q2 NY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_CY_Amount__c</fullName>
        <description>EMEA-only field: before July 2018 it was Expexected Sales * Q3 CY %</description>
        <formula>Realistic_Sales_CY__c  *  Q3_CY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Realistic Sales CY  *  Q3 CY %</inlineHelpText>
        <label>Q3 CY Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_CY_Pct__c</fullName>
        <description>EMEA-only field</description>
        <label>Q3 CY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q3_CY__c</fullName>
        <description>EMEA-only field.</description>
        <label>Q3 CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_NY_Amount__c</fullName>
        <description>EMEA-only field</description>
        <formula>Realistic_Sales_Next_Year__c *  Q3_NY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 NY Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_NY_Pct__c</fullName>
        <description>EMEA-only field</description>
        <label>Q3 NY %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q3_NY__c</fullName>
        <description>EMEA-only field</description>
        <label>Q3 NY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>